# arcade-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  matisse.jpeg:Zone.Identifier  noxfile.py  oik.jpg:Zone.Identifier  pyproject.toml  readme.md  setup.py  tmp  tmp.py  twitch.svg:Zone.Identifier  vivax@109.247.189.161
arcade_cli/: __main__.py  arcade.py  cli.py  draw.py
tests/: custom_strats.py  test_arcade.py  test_cli.py  test_draw.py
