[tool.poetry]
name = "arcade-cli"
version = "0.2.0"
description = "A tool for interacting with the matise arcade"
authors = ["vivax <vivax3794@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.27.1"
more-itertools = "^8.12.0"
PyJWT = "^2.3.0"
rich = "^11.1.0"
poetry2setup = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
pyright = "^0.0.13"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
arcade = 'arcade_cli.cli:arcade_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
